--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hello world</h1>  
+    <a href= "Anti-Racism.html">click here </a>
 </body>
-</html>
+</html> 
