--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>  
-    <a href= "Anti-Racism.html">click here </a>
+    <img src="https://media.istockphoto.com/vectors/be-the-change-equality-concept-protest-stop-racism-vector-vector-id1243256343?s=612x612" alt=" Be the change">
+    <a href= "Anti-Racism.html">click here to see my website </a>
 </body>
 </html> 
