--- a/secondpage.html
+++ b/secondpage.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body> 
-    <h1>Reasons To Stop Racism</h1>
+    <h1>Reasons To Stop Racism</h1> 
+    <a href= "Anti-Racism.html">click here to understand why this should Stop  </a>
 </body>
 </html>  
