--- a/secondpage.html
+++ b/secondpage.html
@@ -8,6 +8,6 @@
 </head>
 <body> 
     <h1>Reasons To Stop Racism</h1> 
-    <a href= "Anti-Racism.html">click here to understand why this should Stop  </a>
+    <iframe frameBoarder="0" src="navigation.html"></iframe>
 </body>
 </html>  
