--- a/thirdpage.html
+++ b/thirdpage.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>What Racism does to others</h1> 
-    <a href= "Anti-Racism.html">click here to find out how this affects others</a>
+    <iframe frameBoarder="0" src="navigation.html"></iframe>
 </body>
 </html>  
