--- a/resources.html
+++ b/resources.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body> 
+    <h1> List of Resources  </h1>
     <ul>
-        <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/being-antiracist"/a> 
-            <ul> 
-                <li><a href="https://www.vox.com/2020/6/3/21278245/antiracist-racism-race-books-resources-antiracism"/a>
+        <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/being-antiracist">Being anti-racist</a></li>
+        <li><a href="https://www.vox.com/2020/6/3/21278245/antiracist-racism-race-books-resources-antiracism"> Stopping Racsim</a></li>
 
 </body>
 </html>  
