--- a/start.html
+++ b/start.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Anti-Racism</h1> 
     <img src ="https://media.istockphoto.com/photos/stop-racism-word-cloud-on-asphalt-concept-of-fighting-discrimination-picture-id1253103314?s=612x612" alt="We are all equal" width="200px" height="200px">
-    <iframe frameBoarder="0" src="navigation.html"></iframe>
+    <iframe frameBoarder="0" src="navigation.html"></iframe> 
+    
+        
+    </p>Race does not biologically exist, yet how we identify with race is so powerful, it influences our experiences and shapes our lives. In a society that privileges white people and whiteness, racist ideas are considered normal throughout our media, culture, social systems, and institutions. Historically, racist views justified the unfair treatment and oppression of people of color</p>
 </body>
 </html>  
 
