--- a/start.html
+++ b/start.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="styles.css" /> 
     <title>Document</title>
 </head>
 <body> 
-        <title>anti-racists</title>
-    <h1> Anti-Racism</h1>  
 
-    [<p>] Race does not biologically exist, yet how we identify with race is so powerful, it influences our experiences and shapes our lives. In a society that privileges white people and whiteness, racist ideas are considered normal throughout our media, culture, social systems, and institutions. Historically, racist views justified the unfair treatment and oppression of people of color.
-        In some countries, there is now broader acknowledgment of the systemic nature of the racism that affects the lives of Africans and people of African descent. There is also wider acceptance of the need to address the past in order to secure future conditions of life that uphold the dignity and rights of all. It is our collective duty to address these issues – immediately and everywhere.  </p>
+    <h1><b>Anti-Racism</b></h1>  
+
+    <p><i>Race does not biologically exist, yet how we identify with race is so powerful, it influences our experiences and shapes our lives. In a society that privileges white people and whiteness, racist ideas are considered normal throughout our media, culture, social systems, and institutions. Historically, racist views justified the unfair treatment and oppression of people of color.
+        In some countries, there is now broader acknowledgment of the systemic nature of the racism that affects the lives of Africans and people of African descent. There is also wider acceptance of the need to address the past in order to secure future conditions of life that uphold the dignity and rights of all. It is our collective duty to address these issues – immediately and everywhere.</i></p>
     <img src ="https://media.istockphoto.com/photos/stop-racism-word-cloud-on-asphalt-concept-of-fighting-discrimination-picture-id1253103314?s=612x612" alt="We are all equal" width="200px" height="200px">
     <iframe frameboarder="0" src="navigation.html"></iframe> 
     
