--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Anti-Racism</h1>  
+    <h1><b>Anti-Racism</b></h1>  
     <img src="https://media.istockphoto.com/vectors/be-the-change-equality-concept-protest-stop-racism-vector-vector-id1243256343?s=612x612" alt=" Be the change">
     <iframe frameBoarder="0" src="navigation.html"></iframe>
 </body>
