--- a/thirdpage.html
+++ b/thirdpage.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="styles.css" /> 
     <title>Document</title>
 </head>
 <body>
-    <h1>What Racism does to others</h1> 
+    <h1><b>The Affects of Racism</b></h1> 
+    <p><i>The American Academy of Pediatrics (AAP) are so concerned about how racism affects the well-being of young people that they released a 2019 policy statement on it.
+        The statement says that failure to address racism in the United States “will continue to undermine health equity of all children, adolescents, emerging adults, and their families.
+        Racism is already linked to poorer birth outcomes, such as infant mortality, for BIPOC. StudiesTrusted Source suggest that mothers who report experiences of racism are more likely to have babies with a low birth weight, which can cause further health problems for the infants later in life.
+        Just as with older BIPOC, young people also experience the ongoing stress of living with and witnessing racism and discrimination. As young BIPOC get older, they have similar risks of developing chronic health conditions as their parents. There is considerable research to suggest that the stress associated with experiencing racism can have long lasting physical effects.
+        Stress can elevate blood pressure and weaken the immune system, which, in turn, raises the risk of developing long-term health conditions.
+</i></p>
     <iframe frameBoarder="0" src="navigation.html"></iframe>
 </body>
 </html>  
