--- a/navigation.html
+++ b/navigation.html
@@ -8,9 +8,10 @@
 </head>
 <body>  
     <a href= "Anti-Racism.html" target="_parent">click here to see my website </a> 
-    <a href= "problem.html" target="_parent">click here to see my reasons for seeing this as a problem </a>
-    <a href= "history.html" target="_parent">click here to understand why this should Stop  </a> 
-    <a href= "solutions.html" target="_parent">click here to find out how we can stop this from happening to others </a> 
-    <a href= "resources.html" target="_parent">click here to see my places I got information from </a>
+    <a href= "start.html" target="_parent">click here to see my reasons for seeing this as a problem </a>
+    <a href= "secondpage.html" target="_parent">click here to understand why this should Stop  </a> 
+    <a href= "thirdpage.html" target="_parent">click here to find out how we can stop this from happening to others </a> 
+    <a href= "fourthpage.html" target="_parent">click here to see my places I got information from </a> 
+    <a href="resources.html" target="_parent">click here to see my places I got information from </a>
 </body>
 </html> 
