Edited pages and link

--- a/fourthpage.html
+++ b/fourthpage.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body> 
-    <h1></h1>
+    <h1><b>History of Racism</b></h1> 
     <iframe frameBoarder="0" src="navigation.html"></iframe>
 </body>
 </html> 
