--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1><b>Anti-Racism</b></h1>  
     <img src="https://media.istockphoto.com/vectors/be-the-change-equality-concept-protest-stop-racism-vector-vector-id1243256343?s=612x612" alt=" Be the change">
-    <iframe frameBoarder="0" src="navigation.html"></iframe>
+    <iframe frameBoarder="0" src="navigation.html" width="100%"></iframe>
 </body>
 </html> 
