--- a/navigation.html
+++ b/navigation.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="styles.css"/>
+    <title>Document</title> 
+    <style> 
+        body{
+            background-color: #F0FFFF;    
+        }
+     a{
+            padding:4px ;     
+            color:#000000; 
+            text-decoration: none;
+        }
+    </style>
+</head> 
 <body>  
     <a href= "Anti-Racism.html" target="_parent">click here to see my website </a> 
-    <a href= "start.html" target="_parent">click here to see my reasons for seeing this as a problem </a>
-    <a href= "secondpage.html" target="_parent">click here to understand why this should Stop  </a> 
-    <a href= "thirdpage.html" target="_parent">click here to find out how we can stop this from happening to others </a> 
-    <a href= "fourthpage.html" target="_parent">click here to see my places I got information from </a> 
+    <a href= "start.html" target="_parent">Racial Standards </a>
+    <a href= "secondpage.html" target="_parent">Reasons to Stop Racism </a> 
+    <a href= "thirdpage.html" target="_parent">The Affects of Racism </a> 
+    <a href= "fourthpage.html" target="_parent">History of Racism</a> 
     <a href="resources.html" target="_parent">click here to see my places I got information from </a>
 </body>
 </html> 
