--- a/navigation.html
+++ b/navigation.html
@@ -23,6 +23,6 @@
     <a href= "secondpage.html" target="_parent">Reasons to Stop Racism </a> 
     <a href= "thirdpage.html" target="_parent">The Affects of Racism </a> 
     <a href= "fourthpage.html" target="_parent">History of Racism</a> 
-    <a href="resources.html" target="_parent">click here to see my places I got information from </a>
+    <a href="resources.html" target="_parent">Resources </a>
 </body>
 </html> 
