--- a/navigation.html
+++ b/navigation.html
@@ -14,6 +14,14 @@
             padding:4px ;     
             color:#000000; 
             text-decoration: none;
+        } 
+        a:hover {
+            background-color: #F0FFFF; 
+            color:black; 
+
+        } 
+        body {
+            background-color: aquamarine; 
         }
     </style>
 </head> 
