--- a/fourthpage.html
+++ b/fourthpage.html
@@ -8,6 +8,11 @@
 </head>
 <body> 
     <h1><b>History of Racism</b></h1> 
-    <iframe frameBoarder="0" src="navigation.html"></iframe>
+    <p><i>Race is a human-invented, shorthand term used to describe and categorize people into various social groups based on characteristics like skin color, physical features, and genetic heredity. Race, while not a valid biological concept, is a real social construction that gives or denies benefits and privileges. American society developed the notion of race early in its formation to justify its new economic system of capitalism, which depended on the institution of forced labor, especially the enslavement of African peoples. To more accurately understand how race and its counterpart, racism, are woven into the very fabric of American society, we must explore the history of how race, white privilege, and anti-blackness came to be. 
+    The concept of “race,” as we understand it today, evolved alongside the formation of the United States and was deeply connected with the evolution of two other terms, “white” and “slave.” The words “race,” “white,” and “slave” were all used by Europeans in the 1500s, and they brought these words with them to North America. However, the words did not have the meanings that they have today. Instead, the needs of the developing American society would transform those words’ meanings into new ideas.
+    During the 17th century, European Enlightenment philosophers based their ideas on the importance of secular reasoning, rationality, and scientific study, as opposed to faith-based religious understandings of the world. Philosophers and naturalists were categorizing the world anew and extending such thinking to the people of the world. These new beliefs, which evolved starting in the late 17th century and flourished through the late 18th century, argued that there were natural laws that governed the world and human beings. Over centuries, the false notion that “white” people were inherently smarter, more capable, and more human than nonwhite people became accepted worldwide. This categorization of people became a justification for European colonization and subsequent enslavement of people from Africa.
+</i></p> 
+    <img src="https://images.app.goo.gl/iYusGtgHhtKaGm4Y6" alt="historical-foundations-race" width="300px" height="300px">
+    <iframe frameboarder="0" src="navigation.html"></iframe> 
 </body>
 </html> 
