--- a/resources.html
+++ b/resources.html
@@ -11,6 +11,6 @@
     <ul>
         <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/being-antiracist">Being anti-racist</a></li>
         <li><a href="https://www.vox.com/2020/6/3/21278245/antiracist-racism-race-books-resources-antiracism"> Stopping Racsim</a></li>
-
+        <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/historical-foundations-race">History of Racism</a></li>
 </body>
 </html>  
