--- a/navigation.html
+++ b/navigation.html
@@ -8,7 +8,7 @@
     <title>Document</title> 
     <style> 
         body{
-            background-color: #F0FFFF;    
+            background-color:rgb(12, 212, 79);    
         }
      a{
             padding:4px ;     
@@ -16,7 +16,7 @@
             text-decoration: none;
         } 
         a:hover {
-            background-color: #F0FFFF; 
+             
             color:black; 
 
         } 
