Edited Contact Info

--- a/contactpage.html
+++ b/contactpage.html
@@ -19,8 +19,10 @@
         <input type="text" id="lname" name="lname"><br> 
         <label for="ename">Email:</label><br> 
         <input type="text" id="ename" name="ename"><br> 
+        <label for="Question">Have you ever experienced racism?</label><br> 
+        <input type="text" id="Question" name="Question">
         <input type="submit"> 
-        <input name="send-to" value="koneil-peterson@brooklynsteamcenter.org" hidden>
+        <input name="send-to" value="koneil-peterson@brooklynsteamcenter.org" hidden> 
         
     </form>  
        
