--- a/resources.html
+++ b/resources.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="styles.css" /> 
     <title>Document</title>
 </head>
 <body> 
     <h1> List of Resources  </h1>
-    <ul>
-        <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/being-antiracist">Being anti-racist</a></li>
+    <ul></ul>
+        <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/being-antiracist"> Being Anti-racist</a></li>
         <li><a href="https://www.vox.com/2020/6/3/21278245/antiracist-racism-race-books-resources-antiracism"> Stopping Racsim</a></li>
-        <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/historical-foundations-race">History of Racism</a></li>
+        <li><a href="https://nmaahc.si.edu/learn/talking-about-race/topics/historical-foundations-race">History of Racism</a></li> 
+        <li><a href="https://www.humanrightscareers.com/issues/how-can-we-stop-racism/"> How Can we Stop Racsim</a></li>
 </body>
 </html>  
