Edited final work

--- a/fourthpage.html
+++ b/fourthpage.html
@@ -16,7 +16,7 @@
     The word “white” held a different meaning, too, and transformed over time. Before the mid-1600s, there is no evidence that the English referred to themselves as being “white people” This concept did not occur until 1613 when the English society first encountered and contrasted themselves against the East Indians through their colonial pursuits. Even then, there was not a large body of people who considered themselves “white” as we know the term today. From about the 1550s to 1600, “white” was exclusively used to describe elite English women, because the whiteness of skin signaled that they were persons of a high social class who did not go outside to labor.
     
 </i></p> 
-    <img src="https://images.app.goo.gl/iYusGtgHhtKaGm4Y6" alt="historical-foundations-race" width="300px" height="300px">
+    <img src="Race picture .jpeg" width="700px" height="400px">
     <iframe frameboarder="0" src="navigation.html"></iframe> 
 </body>
 </html> 
