--- a/navigation.html
+++ b/navigation.html
@@ -11,9 +11,10 @@
             background-color:rgb(12, 212, 79);    
         }
      a{
-            padding:4px ;     
+            padding: 8px;   
             color:#000000; 
-            text-decoration: none;
+            text-decoration: underline;
+            height: 40px; 
         } 
         a:hover {
              
