--- a/navigation.html
+++ b/navigation.html
@@ -21,12 +21,12 @@
             color:black; 
 
         } 
-        body {
-            background-color: aquamarine; 
-        }
+        
     </style>
 </head> 
 <body>  
+    <h1>The other side of Racism</h1> 
+    <iframe src="navigation.html" width="100%"></iframe>
     <a href= "start.html" target="_parent">Racial Standards </a>
     <a href= "secondpage.html" target="_parent">Reasons to Stop Racism </a> 
     <a href= "thirdpage.html" target="_parent">The Affects of Racism </a> 
